[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/LobbyUI.gd" type="Script" id=1]

[sub_resource type="Theme" id=1]

[node name="LobbyUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 896.0
margin_bottom = 480.0
script = ExtResource( 1 )

[node name="PlayerItem" type="Panel" parent="."]
anchor_left = 0.1
anchor_right = 0.1
margin_left = -14.84
margin_top = 165.084
margin_right = 328.16
margin_bottom = 203.084

[node name="Label" type="Label" parent="PlayerItem"]
margin_left = 8.51743
margin_top = 12.5903
margin_right = 48.5174
margin_bottom = 26.5903
text = "Player"

[node name="Ready" type="CheckBox" parent="PlayerItem"]
margin_left = 271.185
margin_top = 7.04065
margin_right = 337.185
margin_bottom = 31.0406
text = "Ready"

[node name="AffiliationItem" type="Panel" parent="."]
anchor_left = 0.1
anchor_right = 0.1
margin_left = -95.6
margin_top = 80.0
margin_right = 342.4
margin_bottom = 151.66
size_flags_vertical = 3
theme = SubResource( 1 )

[node name="Label" type="Label" parent="AffiliationItem"]
margin_left = 19.681
margin_top = 22.9231
margin_right = 142.681
margin_bottom = 47.9231
text = "Affiliation"
valign = 1

[node name="Color" type="ColorRect" parent="AffiliationItem"]
margin_left = 383.784
margin_top = 14.7248
margin_right = 426.784
margin_bottom = 57.7248

[node name="ColorSlider" type="HSlider" parent="AffiliationItem/Color"]
margin_left = 62.0403
margin_top = 42.354
margin_right = 234.04
margin_bottom = 58.354
max_value = 1.0
step = 0.0

[node name="Join" type="Button" parent="AffiliationItem"]
margin_left = 326.275
margin_top = 12.901
margin_right = 361.275
margin_bottom = 34.901
text = "Join"

[node name="Delete" type="Button" parent="AffiliationItem"]
margin_left = 317.815
margin_top = 43.0606
margin_right = 372.815
margin_bottom = 63.0606
text = "Delete"

[node name="NewAffiliation" type="Button" parent="."]
anchor_left = 0.2
anchor_right = 0.2
margin_left = 359.596
margin_top = 75.066
margin_right = 464.6
margin_bottom = 112.066
text = "New Affiliation"

[node name="MapSelector" type="Panel" parent="."]
anchor_left = 0.8
anchor_right = 0.8
margin_left = -934.8
margin_top = 95.0
margin_right = -526.8
margin_bottom = 317.0

[node name="ItemList" type="ItemList" parent="MapSelector"]
margin_left = 100.0
margin_top = 38.0
margin_right = 272.0
margin_bottom = 149.0
